Worked on following point: 		IMPORTANT: Any popup UI should go off when you click some where on conference room[ For the settings and Present] 		another issue.. as a moderator I removed (kickout) all the participants from the meeting and closed.later I again started the meeting and I still see the old participants names. 		Popups still visible when controls slides down 		Wrong time and tome zone

--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -946,3 +946,6 @@ form[class^="device-select"]{
 		justify-content: center;
 	}
 }
+.hidePopups .dropdown-menu.active, .hidePopups #cw_present-menu_setting, .hidePopups #cw_settings_menu{
+	display:none;
+}
